--- a/styles/style.css
+++ b/styles/style.css
@@ -92,7 +92,8 @@ body {
   justify-content: center;
   gap: 16px;
   border: 2px solid var(--cor-terciaria);
-  width: 50%;
+  max-width: 80%;
+  min-width: 60%;
   text-align: center;
   border-radius: 16px;
   padding: 21.5px 0;
