--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 :root {
-  --cor-primaria: #000000;
-  --cor-secundaria: #f6f6f6;
-  --cor-terciaria: #22d4fd;
-  --cor-hover: #272727;
+  --cor-primaria: #303841;
+  --cor-secundaria: #eeeeee;
+  --cor-terciaria: #ea9215;
+  --cor-hover: #3a4750;
 
   --fonte-primaria: "Krona One", sans-serif;
   --fonte-secundaria: "Montserrat", sans-serif;
@@ -109,12 +109,12 @@ ion-icon {
   text-decoration: none;
 }
 
-.apresentacao__conteudo__links__link:hover {
+.apresentacao__conteudo__links__navegacao:hover {
   background-color: var(--cor-hover);
 }
 
 .apresentacao__foto {
-  width: 50%;
+  width: 35%;
   box-shadow: 1.25rem -1.25rem 0rem 0rem var(--cor-terciaria);
   border-radius: 1rem;
 }
@@ -122,10 +122,10 @@ ion-icon {
 .rodape {
   color: var(--cor-primaria);
   background-color: var(--cor-terciaria);
-  padding: 24px;
+  padding: 1rem;
   text-align: center;
   font-family: var(--fonte-secundaria);
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: 400;
 }
 
@@ -141,10 +141,14 @@ ion-icon {
 
   .apresentacao {
     flex-direction: column-reverse;
-    padding: 5%;
+    padding: 8%;
   }
 
   .apresentacao__conteudo {
     width: auto;
+  }
+
+  .apresentacao__foto {
+    width: 70%;
   }
 }
